[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/player.png" type="Texture" id=2]
[ext_resource path="res://scripts/ShakeCamera2D.gd" type="Script" id=3]
[ext_resource path="res://audio/sound/player_hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sound/machine_gun.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sound/player_death.wav" type="AudioStream" id=6]
[ext_resource path="res://sprites/circle_white_small.png" type="Texture" id=7]
[ext_resource path="res://audio/sound/laser.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/sound/shotgun.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/DeathParticles.tscn" type="PackedScene" id=10]
[ext_resource path="res://audio/sound/enemy_death.wav" type="AudioStream" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="Gradient" id=14]
colors = PoolColorArray( 0, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=13]
trail_divisor = 64
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.08
color = Color( 0, 1, 1, 1 )
color_ramp = SubResource( 15 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, -1.0, 0, 1, Vector2( 1, 0 ), -1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 60.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -600.0
scale = 4.0
scale_random = 0.5
scale_curve = SubResource( 10 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShakeCamera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="FlyParticles" type="Particles2D" parent="."]
amount = 64
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )
offset = Vector2( 0, -1 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="DeathSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sound"

[node name="DeathSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Sound"

[node name="MachineGunSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sound"

[node name="ShotgunSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Sound"

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Sound"

[node name="ShootParticles" type="Particles2D" parent="."]
position = Vector2( 2, 0 )
emitting = false
amount = 4
lifetime = 0.1
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )

[node name="DeathParticles" parent="." instance=ExtResource( 10 )]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
